<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fc4a14"
    tools:context="saidahmetbayrak.sab.saidahmetbayrak.vcutkitlendeksi.MainActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="2dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnHesapla"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="top|bottom|center"
        android:text="@string/hesapla"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdBtnErkek" />

    <Button
        android:id="@+id/btnYenile"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="top|bottom|center"
        android:text="@string/yen_le"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toEndOf="@+id/btnHesapla"
        app:layout_constraintTop_toBottomOf="@+id/rdBtnKadın" />

    <TextView
        android:id="@+id/txtBoy"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="top|bottom|center"
        android:text="@string/boy"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtKilo"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="top|bottom|center"
        android:text="@string/kilo"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBoy" />

    <EditText
        android:id="@+id/editBoxBoy"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="number|numberDecimal"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@android:color/black"
        android:typeface="monospace"
        app:layout_constraintStart_toEndOf="@+id/txtBoy"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editBoxKilo"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="number|numberDecimal"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintStart_toEndOf="@+id/txtKilo"
        app:layout_constraintTop_toBottomOf="@+id/editBoxBoy" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="top|bottom|center"
        android:text="@string/rnek_1_72"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toEndOf="@+id/editBoxBoy"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="top|bottom|center"
        android:text="@string/rnek_70"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toEndOf="@+id/editBoxKilo"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txtEndeks"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="top|bottom|center"
        android:text="@string/v_cut_k_tle_endeksi"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHesapla" />

    <TextView
        android:id="@+id/txtKilonuz"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:gravity="top|bottom|center"
        android:text="@string/kilonuz"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEndeks" />

    <TextView
        android:id="@+id/txtKaloriMiktari"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:gravity="top|bottom|center"
        android:text="@string/g_nl_k_kalori_miktari"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKilonuz" />

    <TextView
        android:id="@+id/txtIdealKilo"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:gravity="top|bottom|center"
        android:text="@string/deal_kilonuz"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKaloriMiktari" />

    <RadioButton
        android:id="@+id/rdBtnErkek"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/erkek"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBoxKilo" />

    <RadioButton
        android:id="@+id/rdBtnKadın"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/kad_n"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toEndOf="@+id/rdBtnErkek"
        app:layout_constraintTop_toBottomOf="@+id/editBoxKilo" />
</android.support.constraint.ConstraintLayout>
